--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate": "cross-env NODE_ENV=development ts-node ./node_modules/typeorm/cli.js migration:run -d src/config/database.config.ts",
+    "migrate:revert": "cross-env NODE_ENV=development ts-node ./node_modules/typeorm/cli.js migration:revert -d src/config/database.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
