--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "joi": "^17.13.1",
     "pg": "^8.11.5",
+    "pg-error-enum": "^0.7.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
